# japanstat-evolve

./: .gitignore  LICENSE  README.md  evaluate.py  evo_config.yaml  initial.py  pyproject.toml  run_evo.py  scoring.py  utils.py
data/: finance_2017-2022.csv  labor_2017-2022.csv  population_2017-2022.csv  qa.json  schema.md
data/group_test/: ground_truth.json  qa.json  selection.md
data/group_train/: ground_truth.json  qa.json  selection.md
figures/: pipeline.mmd
results/best_evolved/: main.py
results/eval_test_baseline/: metrics.json
results/eval_test_evolved/: metrics.json
